--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="widget-container">
         <h1>🏃‍♀️ Shuffles This Week</h1>
         <div id="count-goal">0 / 4</div>
-        <button onclick="incrementCount()">+ Add Glass</button>
+        <button onclick="incrementCount()">+ Add Run</button>
     </div>
 
     <script>
