--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Runs Tracker</title>
+    <title>Shuffle Tracker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,60 +13,61 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background: black; /* Set background to black */
-            color: white; /* Default text color to white */
+            background: #191919;  
+            color: white;  
         }
         .widget-container {
-            width: 300px;
-            height: 135px;
+            width: 260px;
+            height: 110px; 
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            border: 3px solid #0077b6; /* Add border */
-            border-radius: 20px; /* Rounded corners */
-            background-color: #1c1c1c; /* Dark background for container */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Subtle shadow */
+            border: 3px solid #4B0082;  
+            border-radius: 20px;  
+            background-color: #1c1c1c;  
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);  
             padding: 10px;
             text-align: center;
         }
         h1 {
-            color: #00b4d8;
+            color: #F5F5F5;
             font-size: 1rem;
             margin: 0;
         }
         #count-goal {
-            font-size: 2rem;
-            color: #90e0ef;
+            font-size: 1.8rem;
+            color: #F5F5F5;
         }
         button {
-            background-color: #0096c7;
+            background-color: #4B0082;  
             color: white;
             border: none;
-            padding: 5px 15px;
+            padding: 5px 10px;
             border-radius: 5px;
             font-size: 1rem;
             cursor: pointer;
+            margin-top: 5px;
         }
         button:hover {
-            background-color: #0077b6;
+            background-color: #3A0066;  
         }
     </style>
 </head>
 <body>
     <div class="widget-container">
         <h1>🏃‍♀️ Shuffles This Week</h1>
-        <div id="count-goal">0 / 4</div>
-        <button onclick="incrementCount()">+ Add Run</button>
+        <div id="count-goal">0 / 5</div>
+        <button onclick="incrementCount()">+ Add Shuffle</button>
     </div>
 
     <script>
         // Set the goal
-        const goal = 4;
+        const goal = 5;
         const countGoalDisplay = document.getElementById('count-goal');
 
         // Retrieve the saved count from localStorage
-        let count = localStorage.getItem('runCount') || 0;
+        let count = localStorage.getItem('shuffleCount') || 0;
         countGoalDisplay.textContent = `${count} / ${goal}`;
 
         // Function to increment the count
@@ -74,29 +75,27 @@
             if (count < goal) {
                 count++;
                 countGoalDisplay.textContent = `${count} / ${goal}`;
-                localStorage.setItem('runCount', count); // Save the count
+                localStorage.setItem('shuffleCount', count); // Save the count
             }
         }
 
         // Reset the count at midnight
         function resetAtMidnight() {
             const now = new Date();
-            const msUntilMidnight = new Date(
-                now.getFullYear(),
-                now.getMonth(),
-                now.getDate() + 1,
-                0, 0, 0, 0
-            ) - now;
+            const easternOffset = -5; // Eastern Time offset in hours (standard time)
+            const utcMidnight = new Date(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate() + 1, easternOffset, 0, 0); // Next midnight in EST
+            const msUntilMidnight = utcMidnight - now;
+
             setTimeout(() => {
-                count = 0;
-                countGoalDisplay.textContent = `${count} / ${goal}`;
-                localStorage.setItem('runCount', count);
-                resetAtMidnight();
+                count = 0; // Reset the count
+                countGoalDisplay.textContent = `${count} / ${goal}`; // Update the display
+                localStorage.setItem('shuffleCount', count); // Save the reset value
+                resetAtMidnight(); // Schedule the next reset
             }, msUntilMidnight);
         }
 
-        resetAtMidnight(); // Initialize the reset function
+        // Initialize the midnight reset
+        resetAtMidnight();
     </script>
 </body>
 </html>
-
