--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            border: 3px solid #4B0082;  
+            border: 3px solid #191919;  
             border-radius: 20px;  
             background-color: #1c1c1c;  
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);  
